--- a/about us.html
+++ b/about us.html
@@ -2,26 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About Us - MOOI's BEAUTY COSMETICS</title>
+    <title>Home - MOOI's BEAUTY COSMETICS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>MOOI's BEAUTY COSMETICS</h1>
+        <h1>Welcome to MOOI's BEAUTY COSMETICS</h1>
     </header>
     <nav>
+        <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
     </nav>
     <main>
-        <h2>About Us</h2>
-        <p>Welcome to MOOI's BEAUTY COSMETICS, your go-to destination for beauty and skincare. We are dedicated to helping you look and feel your best with our premium range of beauty products and professional services.</p>
-        <p>Located in Maseru East, opposite Lesotho High School, we take pride in offering high-quality, affordable beauty solutions tailored to your needs.</p>
-    </main>
-    <footer>
-        <p>Email: mooibeauty@cosmetics.com | Phone: 58700321</p>
-        <p>Location: Maseru East, opposite Lesotho High School</p>
-    </footer>
-</body>
-</html>
+        <h2>Your Beauty, Our Passion</h2>
+        <p>At MOOI's BEAUTY COSMETICS, we believe beauty begins with self-care. Explore our wide range of beauty services and premium products that enhance your natural glow.</p>
+        <p>We are located in <strong>Maseru East, opposite Lesotho High School</strong>. Whether you're looking for expert skincare or professional makeup services, we've got you covered!</p>
+        <p>Feel free to browse through our website to learn more about our
