--- a/about us.html
+++ b/about us.html
@@ -2,21 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home - MOOI's BEAUTY COSMETICS</title>
+    <title>About Us - MOOI's BEAUTY COSMETICS</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to MOOI's BEAUTY COSMETICS</h1>
+        <h1>MOOI's BEAUTY COSMETICS</h1>
+        <p>Empowering Beauty, One Face at a Time</p>
     </header>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <main>
-        <h2>Your Beauty, Our Passion</h2>
-        <p>At MOOI's BEAUTY COSMETICS, we believe beauty begins with self-care. Explore our wide range of beauty services and premium products that enhance your natural glow.</p>
-        <p>We are located in <strong>Maseru East, opposite Lesotho High School</strong>. Whether you're looking for expert skincare or professional makeup services, we've got you covered!</p>
-        <p>Feel free to browse through our website to learn more about our
+        <section>
+            <h2>About Us</h2>
+            <p><strong>MOOI's BEAUTY COSMETICS</strong> was founded with a simple vision: to celebrate beauty in every form. We are a proudly local business located in <strong>Maseru East</strong>, opposite <strong>Lesotho High School</strong>, dedicated to offering high-quality cosmetics and beauty services that uplift and inspire.</p>
+            
+            <p>We believe that beauty is not one-size-fits-all. Our mission is to help every client discover their unique glow by providing expert advice, premium products, and personalized service.</p>
+        </section>
+
+        <section>
+            <h3>Our Values</h3>
+            <ul>
+                <li>✨ Excellence in customer care</li>
+                <li>✨ Premium, trusted products</li>
+                <li>✨ Empowering beauty from within</li>
+                <li>✨ Community-driven and locally rooted</li>
+            </ul>
+        </section>
+
+        <section>
+            <h3>Meet the Team</h3>
+            <p>Our team is made up of passionate, certified beauty professionals with a love for helping people feel confident and radiant. With years of experience in skincare, cosmetics, and personal beauty services, we are proud to serve you.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Email: mooibeauty@cosmetics.com | Phone: 58700321</p>
+        <p>Location: Maseru East, opposite Lesotho High School</p>
+    </footer>
+</body>
+</html>
