--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +7,47 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to MOOI's BEAUTY COSMETICS</h1>
+        <h1>MOOI's BEAUTY COSMETICS</h1>
+        <p>Your Beauty, Our Passion</p>
     </header>
+
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
     </nav>
+
     <main>
-        <h2>Your Beauty, Our Passion</h2>
+        <section>
+            <h2>Welcome to MOOI's BEAUTY COSMETICS</h2>
+            <p>Located in <strong>Maseru East</strong>, opposite <strong>Lesotho High School</strong>, we specialize in enhancing your natural beauty with a touch of elegance. Our wide range of cosmetics and personalized services are designed to help you feel confident and radiant.</p>
+        </section>
+
+        <section>
+            <h2>Why Choose Us?</h2>
+            <ul>
+                <li>✅ Professional Makeup & Skincare Services</li>
+                <li>✅ High-Quality Beauty Products</li>
+                <li>✅ Expert Consultations & Beauty Tips</li>
+                <li>✅ Convenient Location in Maseru East</li>
+                <li>✅ Friendly and Experienced Staff</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Visit Us Today</h2>
+            <p>Whether you’re preparing for a special event or just want to treat yourself, our team is here to help you shine. Visit our store or contact us to book an appointment.</p>
+            <p><strong>Email:</strong> mooibeauty@cosmetics.com</p>
+            <p><strong>Phone:</strong> 58700321</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 MOOI's BEAUTY COSMETICS</p>
+        <p>Email: mooibeauty@cosmetics.com | Phone: 58700321</p>
+        <p>Location: Maseru East, opposite Lesotho High School</p>
+    </footer>
+</body>
+</html>
+
