--- a/images.html
+++ b/images.html
@@ -15,7 +15,7 @@
 
   <div class="gallery">
     <img src="images/lipstick.jpg" alt="Lipstick Collection">
-    <img src="images/skincare.jpg" alt="Skincare Products">
+    <img src="1751304270506.jpg" alt="Skincare Products">
     <img src="images/makeup.jpg" alt="Makeup Kit">
     <img src="images/facial.jpg" alt="Facial Treatment">
     <img src="images/nail-polish.jpg" alt="Nail Polish Set">
