--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="about.html">About Us</a>
         <a href="services.html">Services</a>
         <a href="contact.html">Contact</a>
+        <a href="images.html">Contact</a>
     </nav>
 
     <main>
