--- a/pictures.html
+++ b/pictures.html
@@ -14,8 +14,8 @@
 
   <section class="gallery">
     <div class="image-card">
-      <img src="dual-core-architecture.png" alt="Dual Core Architecture Diagram">
-      <figcaption>Dual Core CPU Architecture</figcaption>
+      <img src="1751304270506.jpg"alt="Dual Core Architecture Diagram">
+       Core CPU Architecture</figcaption>
     </div>
 
     <div class="image-card">
