--- a/pictures.html
+++ b/pictures.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="image-card">
-      <img src="alu-diagram.png" alt="ALU Function Diagram">
+      <img src="1751304286880.jpg" alt="ALU Function Diagram">
       <figcaption>ALU (Arithmetic Logic Unit)</figcaption>
     </div>
 
