--- a/pictures.html
+++ b/pictures.html
@@ -22,6 +22,11 @@
       <img src="1751304286880.jpg" alt="ALU Function Diagram">
       <figcaption>ALU (Arithmetic Logic Unit)</figcaption>
     </div>
+
+    <div class="image-card">
+      <img src="1751359996807.jpg" alt="ALU Function Diagram">
+      <figcaption>ALU(Arithmetic Logic Unit)</figcaption>
+    </div>
       
 
     <div class="image-card">
