--- a/pictures.html
+++ b/pictures.html
@@ -27,7 +27,11 @@
       <img src="1751359996807.jpg" alt="ALU Function Diagram">
       <figcaption>ALU(Arithmetic Logic Unit)</figcaption>
     </div>
-      
+
+    <div class="image-card">
+      <img src="1751360031569.jpg" alt="ALU Function Diagram">
+      <figcaption>ALU(Arithmetic Logic Unit)</figcaption>
+    </div>
 
     <div class="image-card">
       <img src="memory-storage.png" alt="Memory Storage Devices">
