--- a/pictures.html
+++ b/pictures.html
@@ -34,6 +34,11 @@
     </div>
 
     <div class="image-card">
+      <img src="1751360056366.jpg" alt="ALU Function Diagram">
+      <figcaption>ALU(Arithmetic Logic Unit)</figcaption>
+    </div>
+
+    <div class="image-card">
       <img src="memory-storage.png" alt="Memory Storage Devices">
       <figcaption>Memory Storage Devices (HDD & SSD)</figcaption>
     </div>
